# samples

./: README.md
caching/: main.py  requirements.txt
editor/: Untitled.ipynb  main.py  pyproject.toml
mcp_a2a/: mcp_client.ipynb  pyproject.toml
mcp_a2a/mcp_a2a/agents/: run.ipynb
mcp_a2a/mcp_a2a/agents/direct/: agent.py
mcp_a2a/mcp_a2a/mcp/: __main__.py
notebooks/: gemini_batch_prediction.ipynb  lost in the middle.ipynb  multimedia.ipynb  timing_caching.ipynb
reflection/: main.py  reflection.py
retriever/: pyproject.toml  rag_text.py
simplechat/: .gitignore  README.md
simplechat/app/api/chat/: route.ts
updater/: Dockerfile  process.py  requirements.txt
